fixed bug where in Firefox on Windows the header menu items where too high for some reason.

--- a/apps/default/css/style.css
+++ b/apps/default/css/style.css
@@ -123,7 +123,6 @@ nav ul li {
 	text-shadow: 0 0 2px #fff;
 	padding:16px 16px 14px 16px;
 	letter-spacing: 3px;
-	height:100%;
 	border-right: 1px solid #529C68;
 }
 
